k8s-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-app-service
  labels:
    app: counter-app
spec:
  type: ClusterIP # no need external accsess to this service 
  selector:
    app: counter-app
  ports:
    - port: 80
      targetPort: 80
